Feature/endpoint retreive all project components (#67)
* Add new entities and endpoint in the openapi definition

* Modify new endpoint's tag

* Fix response type from list to single value

* Add mocked endpoint for ODS development

* Change @Generated annotation to prevent sonar from analizing the code

---------
